--- a/apps/database/package.json
+++ b/apps/database/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "database",
+  "name": "go-parkgolf-database",
   "version": "0.0.0",
   "main": "./index.ts",
   "types": "./index.ts",
