chore: update Supabase configuration and add migration script

--- a/apps/database/package.json
+++ b/apps/database/package.json
@@ -12,6 +12,7 @@
     "stop": "supabase stop",
     "status": "supabase status",
     "reset": "supabase db reset",
+    "migrate": "supabase migration up --local --include-all",
     "migration:new": "supabase migration new",
     "migration:list": "supabase migration list",
     "functions:serve": "supabase functions serve",
