--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,13 +12,14 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "database": "*",
     "lucide-react": "^0.479.0",
     "next": "15.2.2-canary.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-kakao-maps-sdk": "^1.1.27",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
-    "database": "*"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
