feat: integrate nuqs for dynamic map state management

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "database": "*",
     "lucide-react": "^0.479.0",
     "next": "15.2.2-canary.6",
+    "nuqs": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-kakao-maps-sdk": "^1.1.27",
